--- a/playbook.yml
+++ b/playbook.yml
@@ -14,9 +14,10 @@
       with_items: "{{ groups.all }}"
 
     - name: Update System Packages
-      apt:
+      yum:
+        name: '*'
+        state: latest
         update_cache: yes
-        upgrade: dist
 
     - name: Configure Swappiness
       lineinfile:
@@ -25,16 +26,15 @@
         state: present
 
     - name: Check if Reboot is Required
-      stat:
-        path: /var/run/reboot-required
-      register: reboot_required
+      shell: needs-restarting -r
+      register: needs_restarting
 
     - name: Reboot
       reboot:
-      when: reboot_required.stat.exists
+      when: needs_restarting.rc == 1
 
     - name: Install Python Pip
-      apt:
+      yum:
         name: python-pip
         state: latest
 
